--- a/openspectro/templates/detail/detail.html
+++ b/openspectro/templates/detail/detail.html
@@ -57,15 +57,11 @@
             </a>
           </td>
         </tr>
-        <tr>
-          <td>
-            <img src={{ moleculeLink }} alt="Molecule Image" class="molecule-image">
-          </td>
-          <td>
-            <img src={{ cuvetteLink }} alt="Molecule Image" class="molecule-image">
-          </td>
-        </tr>
       </table>
+      
+      
+      <img src={{ moleculeLink }} alt="Molecule Image" class="molecule-image">
+      <img src={{ cuvetteLink }} alt="Cuvette Image" class="cuvette-image">
 
       <!-- Back Button -->
       <div class="back-button">
