--- a/openspectro/static/css/detail/style.css
+++ b/openspectro/static/css/detail/style.css
@@ -104,8 +104,13 @@
 }
 
 .molecule-image {
-  width: 100%;
   height: 100%;
-  display: block;
+  /* display: block; */
+}
+
+.cuvette-image {
+  /* width: 100%; */
+  height: 100%;
+  /* display: block; */
 }
 
