--- a/openspectro/templates/base.html
+++ b/openspectro/templates/base.html
@@ -13,8 +13,7 @@
 </head>
 <body>
   <header>
-    <h1>{% block header_title %}OpenSpectro: An Open-Source 3D Spectroscopic Profiling Platform{% endblock %}</h1>
-    {% block header_content %}{% endblock %}
+    {% block header_title %}<h1>OpenSpectro: An Open-Source 3D Spectroscopic Profiling Platform</h1>{% endblock %}
   </header>
   <main>
     {% block main_content %}{% endblock %}
