--- a/openspectro/templates/detail/detail.html
+++ b/openspectro/templates/detail/detail.html
@@ -59,9 +59,19 @@
         </tr>
       </table>
       
-      
-      <img src={{ moleculeLink }} alt="Molecule Image" class="molecule-image">
-      <img src={{ cuvetteLink }} alt="Cuvette Image" class="cuvette-image">
+      <!-- Images -->
+      <div>
+        <img src={{ moleculeLink }} alt="Molecule Image" class="molecule-image">
+        <img src={{ cuvetteLink }} alt="Cuvette Image" class="cuvette-image">
+      </div>
+
+      <!-- Buttons -->
+      <div class="action-buttons">
+        <button class="action-button">Absorbance</button>
+        <button class="action-button">Fluorescence</button>
+        <button class="action-button">2D Optimization</button>
+        <button class="action-button">3D Optimization</button>
+      </div>
 
       <!-- Back Button -->
       <div class="back-button">
