--- a/openspectro/templates/home/home.html
+++ b/openspectro/templates/home/home.html
@@ -57,12 +57,10 @@
               <div class="github-box">
                 <p>Check out our GitHub repository for usage instructions:</p>
                 <code id="github-code">
-                  <pre>
-git clone https://github.com/OpenSpectro/openspectro.github.io.git
+                  <pre>git clone https://github.com/OpenSpectro/openspectro.github.io.git
 cd openspectro
 pip install -r requirements.txt
-python main.py
-                  </pre>
+python main.py</pre>
                 </code>
                 <button class="copy-button" onclick="copyToClipboard('github-code')">Copy</button>
               </div>
@@ -79,7 +77,7 @@ python main.py
                 <div class="step">
                   <div class="step-number">2</div>
                   <h4>Biomarker Selection</h4>
-                  <p>Choose from 15+ physiological markers with detailed spectral profiles</p>
+                  <p>Choose from 17 physiological markers with detailed spectral profiles</p>
                 </div>
                 <div class="step">
                   <div class="step-number">3</div>
